appset1/services/actual/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-finance
  annotations:
    external-dns.alpha.kubernetes.io/hostname: finance.loeber.live
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: finance.loeber.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual
            port:
              name: web
  tls:
  - hosts:
    - finance.loeber.live
    secretName: actual-tls
